# FutureAndPromise

./: CMakeLists.txt  README.md  flatten_test.cpp  main.cpp  map_test.cpp  promise_test.cpp
include/: flatten.h  flatten_tuple.h  future.h  map.h  promise.h  shared_state.h  thread_pool.h
